kubernetes/manifests/1password-server/server.yaml
---
# Source: connect/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onepassword-connect
  namespace: 1password
  labels:
    app.kubernetes.io/component: connect
    helm.sh/chart: connect-1.17.0
    app.kubernetes.io/name: connect
    app.kubernetes.io/instance: connect
    app.kubernetes.io/version: "1.7.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    app: onepassword-connect
  ports:
    - port: 8081
      name: connect-sync
    - port: 8080
      name: connect-api
---
# Source: connect/templates/connect-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onepassword-connect
  namespace: 1password
  labels:
    app.kubernetes.io/component: connect
    helm.sh/chart: connect-1.17.0
    app.kubernetes.io/name: connect
    app.kubernetes.io/instance: connect
    app.kubernetes.io/version: "1.7.3"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: onepassword-connect
  template:
    metadata:
      labels:
        app: onepassword-connect
        version: latest
        app.kubernetes.io/component: connect
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
        - name: credentials
          secret:
            secretName: op-credentials
      tolerations: []
      containers:
        - name: connect-api
          image: 1password/connect-api:1.7.4
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 999
            runAsGroup: 999
            allowPrivilegeEscalation: false
          resources:
            limits:
              cpu: "0.5"
              memory: 128Mi
            requests:
              cpu: "0.2"
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /health
              scheme: HTTP
              port: 8080
            initialDelaySeconds: 15

          livenessProbe:
            httpGet:
              path: /heartbeat
              scheme: HTTP
              port: 8080
            failureThreshold: 3
            periodSeconds: 30
            initialDelaySeconds: 15

          volumeMounts:
            - mountPath: /home/opuser/.op/data
              name: shared-data
        - name: connect-sync
          image: 1password/connect-sync:1.7.4
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 999
            runAsGroup: 999
            allowPrivilegeEscalation: false
          resources: {}
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 15

          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8081
              scheme: HTTP
            failureThreshold: 3
            periodSeconds: 30
            initialDelaySeconds: 15

          volumeMounts:
            - mountPath: /home/opuser/.op/data
              name: shared-data
